docs/tests/parser/expressions/invalid/ExprAssignToLiteral.b
fn void test() {
    42 = x;
}
